Refactor IncarnationContext and related classes to use StableElementKey for mappings and reduce complexity